[package]
name = "meteo_grib2_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-error = "0.2.3"
byteorder = "1.4.3"
chrono = "0.4.19"
image = "0.24.2"
derive-new = "0.5.9"
min-max = "0.1.8"
rayon = "1.5.3"
rand = "0.8.5"
ureq = "2.4.0"
bzip2 = "0.4.3"
log = "0.4.17"
env_logger = "0.9.0"
