[package]
name = "meteo_grib2_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.19"
image = "0.25.6"
derive-new = "0.7.0"
min-max = "0.1.8"
rayon = "1.5.3"
ureq = { version = "3.1.0", features = ["json"] }
bzip2 = "0.6.0"
log = "0.4.17"
env_logger = "0.11.8"
assert_approx_eq = "1.1.0"
peekbufread = "0.2.0"
serde_json = "1.0.119"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.47", features = ["derive"] }
