[package]
name = "meteo_grib2_renderer"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.41"
image = "0.25.8"
derive-new = "0.7.0"
min-max = "0.1.8"
rayon = "1.11.0"
ureq = { version = "3.1.0", features = ["json", "gzip", "brotli"] }
bzip2 = "0.6.0"
log = "0.4.28"
env_logger = "0.11.8"
assert_approx_eq = "1.1.0"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.47", features = ["derive"] }
